Fix inactive incognito tab color in dark mode

--- a/Profile Folder/chrome/styles/partials/chrome/chrome-1/_systhemes.scss
+++ b/Profile Folder/chrome/styles/partials/chrome/chrome-1/_systhemes.scss
@@ -177,6 +177,7 @@
 			rgb(150, 166, 186),
 			rgb(148, 164, 185)
 		);
+		--default-tabbrowser-tab-color-inactive: black;
 
 		@media (prefers-color-scheme: dark) {
 			--default-titlebar-active: linear-gradient(
