--- a/Profile Folder/chrome/styles/partials/chrome/chrome-68/_systhemes.scss
+++ b/Profile Folder/chrome/styles/partials/chrome/chrome-68/_systhemes.scss
@@ -69,6 +69,11 @@
 		@include dark;
     }
 
+	&[privatebrowsingmode="temporary"] {
+		// Tabs
+		--default-tabbrowser-tab-color-inactive: white;
+	}
+
 	// GTK+ (rest in peace, icon set icons on toolbar)
 	&[gksystheme="gtk"]:not([gkthemed], [gkchrthemed]) {
 		// Titlebar (now flattened like in ~59)
